[package]
name = "ard-render"
version.workspace = true
edition.workspace = true

[dependencies]
ard-core = { path = "../ard-core" }
ard-window = { path = "../ard-window" }
ard-ecs = { path = "../ard-ecs" }
ard-math = { path = "../ard-math" }
ard-pal = { path = "../ard-pal" }
ard-log = { path = "../ard-log" }
ard-assets = { path = "../ard-assets" }
ard-input = { path = "../ard-input" }
ard-gltf = { path = "../ard-gltf" }
ard-formats = { path = "../ard-formats" }
ard-render-si = { path = "../ard-render-si" }
ard-render-base = { path = "../ard-render-base" }
ard-render-gui = { path = "../ard-render-gui" }
ard-render-meshes = { path = "../ard-render-meshes" }
ard-render-textures = { path = "../ard-render-textures" }
ard-render-material = { path = "../ard-render-material" }
ard-render-pbr = { path = "../ard-render-pbr" }
ard-render-objects = { path = "../ard-render-objects" }
ard-render-renderers = { path = "../ard-render-renderers" }
ard-render-camera = { path = "../ard-render-camera" }
ard-render-lighting = { path = "../ard-render-lighting" }
ard-render-image-effects = { path = "../ard-render-image-effects" }
crossbeam-channel.workspace = true
thiserror.workspace = true
raw-window-handle.workspace = true
bytemuck.workspace = true
rustc-hash.workspace = true
rayon.workspace = true
puffin.workspace = true
winit.workspace = true
egui.workspace = true