[package]
name = "ard-save-load"
version.workspace = true
edition.workspace = true

[dependencies]
ard-core = { path = "../ard-core" }
ard-ecs = { path = "../ard-ecs" }
ard-assets = { path = "../ard-assets" }
serde.workspace = true
bincode.workspace = true
ron.workspace = true
rustc-hash.workspace = true