[package]
name = "ard-window"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ard-ecs = { version = "0.1", git = "ssh://git@github.com/ReeCocho/ard-ecs.git", branch = "main" }
ard-core = { version = "0.1", git = "ssh://git@github.com/ReeCocho/ard-core.git", branch = "main" }
glam = "0.18"